--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html>
   <head>
     <title>Cars for Sale</title>
-    <link rel="stylesheet" href="/src/style.css">
-    <script type="module" src="/src/main.js"></script>
+    <link rel="stylesheet" href="style.css">
+    <script type="module" src="main.js"></script>
   </head>
   <body>
     <header>
